2007-06-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_config.erl: Fixed "language" option processing
	(thanks to Badlop)

	* src/msgs/zh.msg: Updated (thanks to Shelley Shyan)

	* src/msgs/ca.msg: New Catalan translation (thanks to Vicent
	Alberola)

2007-06-05  Mickael Remond  <mickael.remond@process-one.net>

	* src/xml.erl: Add new helper function get_subtag_cdata/2.

2007-05-31  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_vcard_odbc.erl: Fix for previous commit (thanks to
	Badlop)

2007-05-29  Mickael Remond  <mickael.remond@process-one.net>

	* src/mod_vcard_odbc.erl: Make service description translatable in 
	discovery (EJAB-236)
	* src/mod_vcard_ldap.erl: Likewise 
	
	* src/Makefile.in: Added Dialyzer target (EJAB-189 - Thanks
	to Geoff Cant)
	* src/Makefile.in: Build XmppAddr.beam in a single pass
	* src/mod_muc/Makefile.in: +debug_info directive support
	* src/stringprep/Makefile.in: Likewise
	* src/mod_irc/Makefile.in: Likewise
	* src/web/Makefile.in: Likewise
	* src/eldap/Makefile.in: Likewise
	* src/mod_pubsub/Makefile.in: Likewise
	* src/ejabberd_zlib/Makefile.in: Likewise
	* src/mod_proxy65/Makefile.in: Likewise
	* src/tls/Makefile.in: Likewise
	* src/odbc/Makefile.in: Likewise

	* src/mod_vcard.erl: Make services description translatable in 
	discovery (EJAB-236 - thanks to Badlop)
	* src/mod_muc/mod_muc.erl: Likewise
	* src/mod_irc/mod_irc.erl: Likewise
	* src/mod_pubsub/mod_pubsub.erl: Likewise
	* src/mod_proxy65/mod_proxy65_service.erl: Likewise
	* src/msgs/fr.msg: Added service description translation

2007-05-21  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberdctl.template: Updated version of ejabberdctl (thanks
	to Christophe Romain)
	* tools/ejabberdctl: Likewise
	* src/Makefile.in: Updated

	* src/ejabberd_sm.erl: Updated the session table to store
	additional session info
	* src/ejabberd_c2s.erl: Report IP address to ejabberd_sm (thanks
	to Christophe Romain)

2007-05-18  Alexey Shchepin  <alexey@sevcom.net>
